@@ -19,6 +19,8 @@ along with this program; if not, see {http://www.gnu.org/licenses/}. */
 
 #include <QWidget>
 #include <QPushButton>
+#include <QTextStream>
+#include <QFile>
 
 
 namespace Ui {
@@ -48,6 +50,7 @@ private slots:
     void on_corepad_clicked();
     void on_corefm_clicked();
     void on_corebox_clicked();
+    void on_relesenotes_clicked();
 
 private:
     Ui::help *ui;
