@@ -45,21 +45,14 @@ public:
 private slots:
     void on_recents_itemDoubleClicked(QTableWidgetItem *item);
     void on_appCollect_itemDoubleClicked(QListWidgetItem *item);
-    void resizeEvent(QResizeEvent *event);
-
     void on_speedDialB_itemDoubleClicked(QListWidgetItem *item);
-
     void on_coreApps_clicked();
-
     void on_speedDial_clicked();
-
     void on_recentActivites_clicked();
 
 private:
     SettingsManage sm;
     Ui::Start *ui;
-
-    //void setSizeWid(QList<QWidget*> widgets);
 };
 
 #endif // START_H
