@@ -8,7 +8,7 @@ These are the some big changes in CoreBox 2.2.
    - Removed engrampa as moved to CoreArchiver
 
 => Start
-   - UI is now more fast.
+   - New look.
 
 => BookMarks
     -
