@@ -38,6 +38,11 @@ Version 2.2
 - changed folder icon.
 - reduced font size in all app's sidebar.
 - fixed shot preview dialog ui.
+- ui changes in start.
+- added release note file in help app.
+
+
+
 
 
 Version 2.1,Released date Friday, June 1, 2018
